@@ -853,6 +853,112 @@ esac
 
 
 #----------------------------------------------------------------------
+
+AC_MSG_CHECKING(whether spamassassin is enabled)
+AC_ARG_ENABLE(spamassassin,
+        [  --enable-spamassassin      Enable spamassassin. See  README.spamassassin for more info.],
+        ENABLE_SPAMASSASSIN=$enableval,
+                [
+                        ENABLE_SPAMASSASSIN=0
+                ]
+)
+
+case $ENABLE_SPAMASSASSIN in
+  0*|n*|N*)
+      AC_MSG_RESULT(no)
+      ;;
+  *)
+      AC_MSG_RESULT(yes)
+      ENABLE_SPAMASSASSIN=1
+      AC_DEFINE_UNQUOTED(SPAMASSASSIN,$ENABLE_SPAMASSASSIN,"")
+
+    AC_MSG_CHECKING(whether we can locate the spamc program)
+    for f in /usr/bin/spamc /usr/local/bin/spamc
+    do
+        if test -f $f
+        then
+            spamc_prog=$f
+            break
+        fi
+    done
+    AC_ARG_ENABLE(spamc-prog,
+        [  --enable-spamc-prog=PATH   Full path to spamc program [/usr/{local/}bin/spamc].],
+        spamc_prog="$enableval",
+        [
+            if test "$spamc_prog" = ""
+            then
+                AC_MSG_RESULT(no)
+                AC_MSG_ERROR([Unable to find your spamc prog, specify --enable-spamc-prog.])
+            fi
+        ]
+    )
+
+    if test ! -f "$spamc_prog"
+    then
+        AC_MSG_RESULT(no)
+        AC_MSG_ERROR([Unable to find your spamc program, specify --enable-spamc-prog=/full/path/to/spamc])
+    fi
+
+    AC_MSG_RESULT(yes)
+    AC_DEFINE_UNQUOTED(SPAMC_PROG,"$spamc_prog","")
+
+      ;;
+esac
+
+#----------------------------------------------------------------------
+
+AC_MSG_CHECKING(whether maildrop is enabled)
+AC_ARG_ENABLE(maildrop,
+        [  --enable-maildrop          Enable maildrop. See  README.maildrop for more info.],
+        ENABLE_MAILDROP=$enableval,
+                [
+                        ENABLE_MAILDROP=0
+                ]
+)
+
+case $ENABLE_MAILDROP in
+  0*|n*|N*)
+      AC_MSG_RESULT(no)
+      ;;
+  *)
+      AC_MSG_RESULT(yes)
+      ENABLE_MAILDROP=1
+      AC_DEFINE_UNQUOTED(MAILDROP,$ENABLE_MAILDROP,"")
+
+    AC_MSG_CHECKING(whether we can locate the maildrop program)
+    for f in /usr/bin/maildrop /usr/local/bin/maildrop
+    do
+        if test -f $f
+        then
+            maildrop_prog=$f
+            break
+        fi
+    done
+    AC_ARG_ENABLE(maildrop-prog,
+        [  --enable-maildrop-prog=PATH    Full path to maildrop program [/usr/{local/}bin/maildrop].],
+        maildrop_prog="$enableval",
+        [
+            if test "$maildrop_prog" = ""
+            then
+                AC_MSG_RESULT(no)
+                AC_MSG_ERROR([Unable to find your maildrop prog, specify --enable-maildrop-prog.])
+            fi
+        ]
+    )
+
+    if test ! -f "$maildrop_prog"
+    then
+        AC_MSG_RESULT(no)
+        AC_MSG_ERROR([Unable to find your maildrop program, specify --enable-maildrop-prog=/full/path/to/maildrop])
+    fi
+
+    AC_MSG_RESULT(yes)
+    AC_DEFINE_UNQUOTED(MAILDROP_PROG,"$maildrop_prog","")
+
+      ;;
+esac
+
+#----------------------------------------------------------------------
 #  -- domain quotas disabled until they actually work again --
 #AC_MSG_CHECKING(whether domainquotas is enabled)
 #AC_ARG_ENABLE(domainquotas,
@@ -1699,6 +1805,24 @@ then
     echo "one domain per SQL table     = --disable-many-domains"
   fi
 fi
+
+case $ENABLE_SPAMASSASSIN in
+  1*|y*|Y*)
+    echo "      spamassassin = ON  --enable-spamassassin"
+    ;;
+  *)
+    echo "      spamassassin = OFF --disable-spamassassin (default)"
+    ;;
+esac
+
+case $ENABLE_MAILDROP in
+  1*|y*|Y*)
+    echo "          maildrop = ON  --enable-maildrop"
+    ;;
+  *)
+    echo "          maildrop = OFF --disable-maildrop (default)"
+    ;;
+esac
 
 echo "${CC} -O2" > cdb/conf-cc
 echo "${CC} -s" > cdb/conf-ld
